# BeatVoxRevisited

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
source/application/: CMakeLists.txt  MainComponent.cpp  MainComponent.h
source/feature-extraction/: CMakeLists.txt  MfccExtraction.cpp  MfccExtraction.h  MfccExtractionTest.cpp
source/segmentation/: CMakeLists.txt  OnsetDetection.cpp  OnsetDetection.h  OnsetDetectionTest.cpp
source/utils/: CMakeLists.txt  Utils.cpp  Utils.h
submodules/JUCE/modules/juce_gui_basics/native/accessibility/: juce_ios_Accessibility.mm
